# mosquitto

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  algs  mitm.py  ruff.toml  tokens
3drenderer/: CMakeLists.txt  Makefile  README.md
3drenderer/src/: array.c  array.h  camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  quick_sort.c  quick_sort.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
autogr/: README.md  fn.py  functions.py  grad.py  graph.py  methods.py  pyproject.toml  tensor.py  test.ipynb  test_tensor.py  tests.py
cv/: README.md  bilateral_filter.ipynb  cv_plaground.ipynb  harris_corner_detector.ipynb  histogram_equalization.ipynb  homography.ipynb  ip_basics.ipynb  local_features.py  playground.ipynb  pyproject.toml  requirements.txt  seam_carving.ipynb
cv/cv_panel/: README.md  app.py  main.qml  main_screen.py  mise.toml  models.py  pyproject.toml  rxconfig.py  signals.py  store.py
cv/cv_panel/configs/: homography.yaml
cv/cv_panel/data/: sidebar.py
cv/cv_panel/descriptors/: homography.yaml
cv/cv_panel/methods/: image_registration.py
cv/cv_panel/nicegui_app/: __init__.py  app.py  logs.py  requirements.txt  state.py  utils.py
cv/cv_panel/nicegui_app/screen_methods/: connected_components.py  derivative_inpainting.py  dft.py  grayscale.py
cv/cv_panel/pyside/: app.py  store.py
cv/cv_panel/reflex_app/: .gitignore  __init__.py  models.py  reflex_app.py  state.py
cv/cv_panel/reflex_app/methods/: image_registration.py
little_ml_story/: .env.example  .gitignore  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  package-lock.json  pyproject.toml
little_ml_story/apps/api/: Dockerfile  alembic.ini
little_ml_story/apps/api/alembic/: env.py
little_ml_story/apps/api/app/: cache.py  events.py  imagenet_labels.py  logging.py  main.py  schemas.py  settings.py  triton_client.py
little_ml_story/apps/consumer/: Dockerfile  consumer.py
little_ml_story/apps/spark_jobs/: Dockerfile  daily_aggregations.py
little_ml_story/docs/: runbook.md  talking-points.md
little_ml_story/infra/clickhouse/: init.sql
little_ml_story/infra/grafana/dashboards/: api-red.json  clickhouse-analytics.json  triton.json
little_ml_story/infra/k8s/: README.md  kind-config.yaml
little_ml_story/infra/k8s/manifests/: 10-postgres.yaml  20-redis.yaml  30-triton.yaml
little_ml_story/infra/load/: k6.js
little_ml_story/infra/opensearch/: README.md
little_ml_story/infra/postgres/: init.sql
little_ml_story/infra/prometheus/: prometheus.yml
little_ml_story/infra/prometheus/rules/: api.yml
little_ml_story/infra/triton/: fetch_model.sh
little_ml_story/infra/vector/: vector.toml
little_ml_story/tasks/: README.md  advanced.md  fast_track_day1.md  fast_track_day2.md  fast_track_day3.md
little_ml_story/tests/e2e/: test_predict_happy_path.py
little_ml_story/tests/fixtures/: README.md
little_ml_story/tests/unit/: test_labels.py  test_preprocess.py  test_settings.py
local_llm/web_app/: CMakeLists.txt  http_server.py  pseudo_server.py
local_llm/web_app/src/: common.h  http_server.cpp
ml/: attn.py  module_path.py  pyproject.toml  requirements.txt  transformer.py  transformer_decoder.ipynb  transformer_decoder_rope.ipynb  transformer_encoder_decoder.ipynb  transformers.ipynb  vit.py
ml/functions/: __init__.py  boxes.py  detections.py
ml/infra/lakefs/: docker-compose.yaml
ml/object_detection/detr/: model.py
ml/object_detection/detr_fork/: README.md  mise.toml  pyproject.toml  requirements.txt  rt_detr.py  test.ipynb
ml/object_detection/detr_fork/config/: voc.yaml
ml/object_detection/detr_fork/dataset/: voc.py
ml/object_detection/faster_rcnn/: README.md  config.yaml  faster_rcnn.py  functions.py  model.py  ref.py
ml/object_detection/faster_rcnn_fork/: README.md  ab.py  requirements.txt  test.ipynb  utils.py
ml/scratchers/: README.md  attn.py  encoder_decoder_transformer.py  positional_embeddings.py  rotary_embeddings.py  transformer.py  transformer_config.py
ml/scratchers/rotary_transformer/: attn.py  transformer.py
ml/scratchers/transformer/: attn.py  transformer.py
ml/scratchers/vanilla_transformer/: attn.py  transformer.py
ml/utils/: functions.py
opengl_playground/: CMakeLists.txt  build_and_run.sh
opengl_playground/src/: Shader.cpp  Shader.h  main.cpp  shader.fs  shader.vs  stb_image.h  stb_image_impl.h
polytop/py/: pyproject.toml  requirements.txt
polytop/py/src/: app.py
polytop/rust/: Cargo.toml  README.md  TOP.md
polytop/rust/poly-core/: Cargo.toml
polytop/rust/poly-tui/: Cargo.toml
polytop/rust/polytop-core/: Cargo.toml
polytop/rust/src/: config.rs  env.rs  event_loop.rs  main.rs  ui.rs
polywhale/rust/poly-tui/: Cargo.toml
ray/ray_rust/: .gitignore  .mise.toml  BUILD.bazel  MODULE.bazel  README.md  cargo.toml
ray/ray_rust/src/: app.rs  camera_controller.rs  common.rs  gltf.rs  gltf_loader.rs  gltf_models.rs  gltf_wgpu.rs  lib.rs  main.rs  model.rs  render_controller.rs  shader.wgsl  texture.rs  vertex.rs
ray/ray_rust/tests/: smoke_test.rs
redis/: CMakeLists.txt  client.py  main.cpp  server.py
redis/client/: main.cpp
redis/common/: consts.h  event_loop.h  utils.h
redis/server/: main.cpp  main_loop.cpp
specter/: .bazelrc  .mise.toml  BUILD.bazel  MODULE.bazel  Package.swift  README.md
specter/.claude/: CLAUDE.md
specter/.claude/rules/: cpp-code-style.md  swift-code-style.md
specter/.cursor/rules/: cpp-code-style.mdc  swift-code-style.mdc
specter/core/bridge/: BUILD.bazel  bridge.h
specter/core/cpp/: BUILD.bazel
specter/core/rust/: BUILD.bazel
specter/core/rust_uniffi/: BUILD.bazel  Cargo.toml  fake_cargo.sh
specter/ios/: BUILD.bazel  Info.plist  ViewController.swift
specter/ios/App/: AGENTS.md  BUILD.bazel  Info.plist
specter/ios/Sources/: MainView.swift  ModuleDetailViewController.swift  ModuleService.swift  ModulesView.swift  ViewController.swift
specter/shared/cpp/: BUILD.bazel  hello.cc  hello.h
specter/shared/rust/: BUILD.bazel
(+984 files in other folders)
