[project]
package-mode = false
name = "autogr"
version = "0.1.0"
description = ""
authors = [
    {name = "Semen Bakulin",email = "semen.bakulin@rwb.ru"}
]
readme = "README.md"
requires-python = "=3.13.7"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "torch (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"