[project]
name = "little-ml-story"
version = "0.1.0"
description = "MLOps fast-track playground: FastAPI + Triton + Postgres + Redis + Kafka + ClickHouse + Spark + Prometheus/Grafana + OpenSearch + k8s"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pillow>=11.0",
    "numpy>=2.0",
    "tritonclient[grpc]>=2.50",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.2",
    "aiokafka[lz4]>=0.12",
    "clickhouse-connect>=0.8",
    "prometheus-fastapi-instrumentator>=7.0",
    "orjson>=3.10",
    "psycopg2-binary>=2.9,<3.0"
]

[project.optional-dependencies]
consumer = [
    "aiokafka[lz4]>=0.12",
    "clickhouse-connect>=0.8",
    "structlog>=24.4",
    "orjson>=3.10",
    "pydantic-settings>=2.6",
]
spark = [
    "pyspark>=3.5",
    "clickhouse-connect>=0.8",
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q"
testpaths = ["tests"]
