package(default_visibility = ["//visibility:public"])

load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

alias(
    name = "ios_app",
    actual = "//ios:app",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "specter",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            ":ios_app",
            target_environments = ["simulator"], 
        ),
    ],
)
