package(default_visibility = ["//visibility:public"])

load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

alias(
    name = "ios_app",
    actual = "//ios:app",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "specter",
    tags = ["manual"],
    # Ensure Xcode launches Bazel with the default toolchain by clearing any
    # TOOLCHAINS value it might inject (e.g., Metal). An empty string makes
    # rules_xcodeproj treat it as unset. Otherwise it errors out when compiling cpp_core =(
    bazel_env = {
        "TOOLCHAINS": "",
    },
    top_level_targets = [
        top_level_target(
            ":ios_app",
            target_environments = ["simulator"],
        ),
    ],
)
