[project]
name = "cv_panel"
version = "0.1.0"
description = ""
authors = [
    {name = "Bob",email = "bobby.bob@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2,<2.3.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
