[project]
name = "cv_panel"
version = "0.1.0"
description = ""
authors = [
    {name = "Bob",email = "bobby.bob@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "dash (>=3.3.0,<4.0.0)",
    "numpy (>=2,<2.3.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "dash-mantine-components (>=2.4.1,<3.0.0)",
    "dash-core-components (>=2.0.0,<3.0.0)",
    "dash-iconify (>=0.1.2,<0.2.0)",
    "reflex (>=0.8.24.post1,<0.9.0)",
    "nicegui (>=3.4.1,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "debugpy (>=1.8.19,<2.0.0)"
]
