[project]
name = "polytop"
version = "0.1.0"
description = "Textual TUI scaffold for monitoring Polymarket"
readme = "README.md"
authors = [
    { name = "bakulin.semen", email = "bakulin.semen@rwb.ru" }
]
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.7",
]

[project.scripts]
polytop = "polytop.app:main"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"
