[package]
name = "polytop"
version = "0.1.0"
edition = "2021"
description = "Polymarket monitor TUI"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
