[package]
name = "polytop"
version = "0.1.0"
edition = "2021"
description = "Polymarket monitor TUI"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
