load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "ray_rust",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@crates//:gltf",
    ],
    edition = "2021",
)

rust_binary(
    name = "app",
    srcs = ["src/main.rs"],
    deps = [
        ":ray_rust",
        "@crates//:winit",
    ],
    edition = "2021",
)

rust_test(
    name = "smoke_test",
    srcs = ["tests/smoke_test.rs"],
    deps = [":ray_rust"],
    edition = "2021",
)
