package(default_visibility = ["//visibility:public"])

load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ios_app_lib",
    srcs = glob(["Sources/**/*.swift"]),
    deps = [
        "//core/cpp:core_cpp",
        "@swiftpkg_snapkit//:SnapKit",
    ],
)

ios_application(
    name = "app",
    bundle_id = "com.example.specter",
    families = ["iphone", "ipad"],
    infoplists = ["Info.plist"],
    minimum_os_version = "17.0",
    deps = [":ios_app_lib"],
    resources = glob(["Resources/**"]),
)
