package(default_visibility = ["//visibility:public"])

load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_apple//apple:resources.bzl", "apple_metal_library")
load("@rules_swift//swift:swift.bzl", "swift_library")

apple_metal_library(
    name = "Shaders",
    srcs = ["Sources/shaders/Identity.metal"],
)

swift_library(
    name = "ios_app_lib",
    srcs = glob(["Sources/app/**/*.swift"]),
    deps = [
        "//core/cpp:core_cpp",
        "//core/rust:core_rust",
        "@swiftpkg_snapkit//:SnapKit",
        ":Base",
    ],
)

swift_library(
    name = "Base",
    srcs = glob(["Sources/base/**/*.swift"]),
    deps = [
    ],
)

ios_application(
    name = "app",
    bundle_id = "com.example.specter",
    families = ["iphone", "ipad"],
    infoplists = ["Info.plist"],
    minimum_os_version = "18.0",
    deps = [":ios_app_lib"],
    resources = glob(["Resources/**"]) + [":Shaders"],
)
