package(default_visibility = ["//visibility:public"])

load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_apple//apple:resources.bzl", "apple_metal_library")
load("@rules_swift//swift:swift.bzl", "swift_library")
load("@rules_apple//apple:apple.bzl", "local_provisioning_profile")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "xcode_provisioning_profile",
)

apple_metal_library(
    name = "Shaders",
    srcs = ["Sources/shaders/Identity.metal"],
)

swift_library(
    name = "ios_app_lib",
    srcs = glob(["Sources/app/**/*.swift"]),
    deps = [
        "@swiftpkg_snapkit//:SnapKit",
        ":Base",
        "//core/cpp:core_cpp",
        "//core/bridge:rust_ffi",
        "//core/rust_uniffi:uniffi_hello_swift",
    ],
    copts=["-cxx-interoperability-mode=default"]
)

swift_library(
    name = "Base",
    srcs = glob(["Sources/base/**/*.swift"]),
    deps = [
    ],
)

xcode_provisioning_profile(
   name = "xcode_profile",
   managed_by_xcode = True,
   provisioning_profile = ":provisioning_profile",
)

local_provisioning_profile(
    name = "provisioning_profile",
    profile_name = "iOS Team Provisioning Profile: com.example.specter",
    team_id = "P6KS79CKQD",
)

ios_application(
    name = "app",
    bundle_id = "com.example.specter",
    families = ["iphone", "ipad"],
    infoplists = ["Info.plist"],
    minimum_os_version = "26.0",
    deps = [":ios_app_lib"],
    resources = glob(["Resources/**"]) + [":Shaders"],
    provisioning_profile = ":xcode_profile",
)
 