[tool.poetry]
name = "detr_fork"
version = "0.1.0"
description = ""
authors = ["Woodraw Willson <percalee@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.13.0,<3.15"
einops = "0.8.0"
opencv-python = "4.10.0.84"
pillow = "10.4.0"
PyYAML = "6.0.1"
tqdm = "4.66.4"
scipy = "^1.16.3"
torch = "2.9.1"
torchvision = "0.24.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
