[package]
name = "poly-core"
version.workspace = true
edition.workspace = true
description = "Shared Polymarket data types and API client for polytop"

[dependencies]
polymarket_client_sdk_v2 = { version = "0.6.0", features = ["clob", "gamma"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.40.0", features = ["sync"] }
