[package]
name = "poly-tui"
version.workspace = true
edition.workspace = true
description = "Polymarket monitor TUI"

[dependencies]
poly-core = { path = "../poly-core" }
color-eyre = "0.6.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
rand = "0.10.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
throbber-widgets-tui = "0.11.1"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }
tui-logger = "0.18.3"
log = "0.4.33"
