load("@rules_swift//swift:swift.bzl", "swift_interop_hint")

cc_library(
    name = "rust_ffi",
    hdrs = ["bridge.h"],
    deps = ["//core/rust:core_rust"],
    visibility = ["//visibility:public"],
    aspect_hints = [":rust_ffi_interop"],

)

swift_interop_hint(
    name = "rust_ffi_interop",
    # module_map = "module.modulemap",
    module_name = "rust_ffi",
)
