load("@rules_swift//swift:swift.bzl", "swift_interop_hint")


cc_library(
    name = "core_cpp",
    hdrs = glob(["include/**/*.h", "include/**/*.hpp"]),
    srcs = glob(["src/**/*.cc", "src/**/*.cpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    aspect_hints = [":core_cpp_ffi_interop"],
)

cc_test(
    name = "core_cpp_test",
    srcs = ["src/core_test.cpp"],
    deps = [":core_cpp"],
)

swift_interop_hint(
    name = "core_cpp_ffi_interop",
    module_name = "core_cpp",
)
