load("@rules_rust//rust:defs.bzl", "rust_static_library")

rust_static_library(
    name = "core_rust_uniffi",
    srcs = ["src/lib.rs"],
    compile_data = ["Cargo.toml"],
    edition = "2021",
    crate_name = "uniffi_hello",
    deps = ["@crates//:uniffi"],
    visibility = ["//visibility:public"],
)
