load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "app_lib",
    srcs = [
        "AppDelegate.swift",
        "ViewController.swift",
    ],
)

ios_application(
    name = "App",
    bundle_id = "com.example.specter",
    families = ["iphone", "ipad"],
    infoplists = ["Info.plist"],
    minimum_os_version = "17.0",
    deps = [":app_lib"],
)
